# oop-lab4

./: .gitignore  CMakeLists.txt  run.sh
src/: array.h  figure.h  hexagon.h  main.cpp  octagon.h  point.h  triangle.h
tests/: test.cpp
